--- a/style.css
+++ b/style.css
@@ -5,21 +5,17 @@
 }
 
 header{
-  width: 90%;
+  width: 100%;
   padding: 20px 0;
-  margin: 0 auto;
   text-align: center;
-}
-
-header .heading{
-  font-size: 32px;
 }
 
 .nav-list{
   text-align: center;
   padding: 15px;
   margin: 0 auto;
-  border: 1px solid;
+  border-bottom: 1px solid #848282;
+  border-top: 1px solid #848282;
 }
 
 .nav-list-item{
@@ -29,12 +25,10 @@ header .heading{
 }
 
 .main{
-  width: 900px;
-  padding: 50px;
+  width: 800px;
+  margin: 50px auto;
   flex-wrap: wrap;
   display: flex;
-  justify-content: center;
-  margin: 0 auto;
 }
 
 .box1{
